@@ -1,0 +1,10 @@
+// -*- MPC -*-
+// $Id$
+
+project(*) : taoserver {
+  exename = Test
+
+  Source_Files {
+    Test.cpp
+  }
+}
